css/style.css
/* 
  * Layout width   
  * Mobile: 375px
  * Desktop: 1440px
 */

/* 
  * Brack points
  * sm: 576px;
  * md: 768px;
  * lg: 992px;
  * xl: 1200px;
 */

/* Global */
:root {
  --cyan: hsl(171, 66%, 44%);
  --light-blue: hsl(233, 100%, 69%);
  --dark-grayish-blue: hsl(210, 10%, 33%);
  --grayish-blue: hsl(201, 11%, 66%);
}

* {
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
}

body {
  font-family: "Bai Jamjuree", sans-serif;
  font-size: 18px;
}

a {
  text-decoration: none;
  color: var(--dark-grayish-blue);
  transition: color 0.3s;
  -webkit-transition: color 0.3s;
  -moz-transition: color 0.3s;
  -ms-transition: color 0.3s;
  -o-transition: color 0.3s;
}

a:hover {
  color: var(--cyan);
}

h1,
h2,
h3,
h4,
h5,
h6 {
  color: var(--dark-grayish-blue);
  font-weight: 600;
  line-height: 1.4;
}

p {
  color: var(--grayish-blue);
  font-weight: 400;
  line-height: 1.6;
}

/* Global */

/* Grid Styles */
.container {
  width: 100%;
  padding: 0 25px;
  margin: 0 auto;
}

@media (min-width: 576px) {
  .container {
    width: 540px;
  }
}

@media (min-width: 768px) {
  .container {
    width: 720px;
  }
}

@media (min-width: 992px) {
  .container {
    width: 960px;
  }
}

@media (min-width: 1200px) {
  .container {
    width: 1140px;
  }
}
/* Grid Styles */

/* Header */
.hero {
  height: 100vh;
  background: url("../images/bg-header-mobile.png") top center no-repeat;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.hero h1 {
  font-size: 32px;
  margin-top: 50px;
}

.hero .btns,
.cta .btns {
  margin-top: 50px;
  text-align: center;
}

.hero .btn,
.cta .btn {
  display: inline-block;
  width: 100%;
  height: 55px;
  border-radius: 50rem;
  -webkit-border-radius: 50rem;
  -moz-border-radius: 50rem;
  -ms-border-radius: 50rem;
  -o-border-radius: 50rem;
  line-height: 55px;
  color: #fff;
  font-weight: 600;
  transition: opacity 0.3s;
  -webkit-transition: opacity 0.3s;
  -moz-transition: opacity 0.3s;
  -ms-transition: opacity 0.3s;
  -o-transition: opacity 0.3s;
  cursor: pointer;
}

.hero .btn:hover,
.cta .btn:hover {
  opacity: 0.8;
}

.hero .btn.ios-btn,
.cta .btn.ios-btn {
  background-color: var(--cyan);
  margin-bottom: 25px;
  box-shadow: 0px 3px 1px 0px hsl(171, 66%, 35%);
}
.hero .btn.mac-btn,
.cta .btn.mac-btn {
  background-color: var(--light-blue);
  box-shadow: 0px 3px 1px 0px hsl(233, 100%, 63%);
}

@media (min-width: 576px) {
  .hero {
    background: url("../images/bg-header-desktop.png") top center no-repeat;
  }

  .hero h1 {
    font-size: 42px;
  }

  .hero .btn,
  .cta .btn {
    width: 230px;
    margin: 0 10px;
  }
}

/* Header */

/* Main */

/* Section */
.section {
  padding: 50px 0;
}

.section .row {
  margin-top: 50px;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
}

.section .section-title {
  font-size: 28px;
  text-align: center;
}

.section .section-title + p {
  text-align: center;
}

@media (min-width: 576px) {
  .section .section-title {
    font-size: 36px;
  }
  .section .section-title + p {
    max-width: 65%;
    margin: auto;
  }

  .section .row p {
    font-size: 1rem;
  }
  .features .col {
    width: calc(50% - 30px);
  }
}
/* Section */

/* Features */
.features .col img {
  width: 100%;
}

.features .feat {
  text-align: center;
  margin-top: 50px;
}

.feat h3 {
  font-size: 24px;
}

@media (min-width: 576px) {
  .features .col {
    width: calc(50% - 30px);
  }

  .features .feat {
    text-align: unset;
    margin-top: unset;
  }
}
@media (min-width: 992px) {
  .features .col img {
    width: 135%;
    display: block;
    margin-left: -220px;
  }
}
/* Features */

/* Devices */
.devices .col img {
  width: 100%;
}
/* Devices */

/* Workflow */

.workflow .work {
  text-align: center;
  margin-top: 50px;
}

.work h3 {
  font-size: 24px;
}

@media (min-width: 576px) {
  .workflow .row {
    align-items: unset;
  }
  .workflow .col {
    width: calc((100% / 2) - 15px);
  }
  .workflow .work {
    margin-top: unset;
  }
}

@media (min-width: 992px) {
  .workflow .col {
    width: calc((100% / 3) - 15px);
  }
}

/* Workflow */

/* Brand */
.brand .col {
  width: 100%;
  text-align: center;
  margin-top: 60px;
}

@media (min-width: 576px) {
  .brand .col {
    width: 20%;
  }
  .brand .col img {
    width: 70%;
  }
}

@media (min-width: 992px) {
  .brand .col {
    width: unset;
  }
  .brand .col img {
    width: unset;
  }
}
/* Brand */

/* CTA */
.cta .btns {
  margin-bottom: 50px;
}
/* CTA */

/* Main */

/* Footer */
footer.section {
  padding: 50px 0 30px;
  text-align: center;
  background-color: #eee;
}

footer .col {
  width: 100%;
}

footer .col img.logo {
  width: 55px;
  margin-bottom: 50px;
}

footer .col a.link {
  display: block;
  margin-bottom: 35px;
}

footer .col a.icon {
  display: inline-block;
  margin: 0 20px;
}

@media (min-width: 768px) {
  footer.section {
    text-align: unset;
  }

  footer.section .row {
    align-items: unset;
    margin-top: unset;
    flex-wrap: unset;
  }

  footer .col {
    width: unset;
  }

  footer .col img.logo {
    margin-bottom: unset;
  }

  footer .col a.link {
    margin-bottom: 20px;
  }
}
/* Footer */

